--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,1 +1,2 @@
+<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 <script defer data-domain="powersheet.co" src="https://plausible.io/js/script.js"></script>
