--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,2 +1,2 @@
-<link rel="shortcut icon" type="image/ico" href="/favicon.ico">
+<link rel="shortcut icon" type="image/png" href="/favicon.png">
 <script defer data-domain="powersheet.co" src="https://plausible.io/js/script.js"></script>
