--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <div class="container-lg px-3 my-5 markdown-body">
       
       {% if site.title and site.title != page.title %}
-      <h1><a href="{{ "/" | absolute_url }}">Home</a></h1>
+      <a href="{{ "/" | absolute_url }}">Home</a>
       {% endif %}
 
       {{ content }}
