--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,13 +14,17 @@
       
       {{ content }}
 
-      <!-- {% if site.github.private != true and site.github.license %} -->
-      <div> <!--  class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray" -->
+      
+      <div>
         This site is open source. {% github_edit_link "Improve this page" %}.
         We are using <a href="https://plausible.io/">Plausible</a> for website analytics
       </div>
-      <!-- {% endif %} -->
+      
     </div>
+        <div>
+        This site is open source. {% github_edit_link "Improve this page" %}.2
+        We are using <a href="https://plausible.io/">Plausible</a> for website analytics
+      </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
     <script>anchors.add();</script>
   </body>
