--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,8 @@
       {{ content }}
 
       
-      <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
-        We are using <a href="https://plausible.io/">Plausible</a> for website analytics
+      <div class="footer border-top border-gray-light mt-5 pt-3 text-center text-gray">
+        We use <a href="https://plausible.io/">Plausible</a> for website analytics
       </div>
       
     </div>
