--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 
       
       <div class="footer border-top border-gray-light mt-5 pt-3 text-center text-gray">
-        We use privacy-friendly <a href="https://plausible.io/">Plausible</a> for website analytics
+        We use privacy-friendly <a href="https://plausible.io/">Plausible</a> for website analytics and do not store cookies on your devices
       </div>
       
     </div>
