--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 
       
       <div class="footer border-top border-gray-light mt-5 pt-3 text-center text-gray">
-        We use <a href="https://plausible.io/">Plausible</a> for website analytics and don't store cookies
+        We use <a href="https://plausible.io/">Plausible</a> for website analytics
       </div>
       
     </div>
