--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,10 +16,10 @@
 
       
       <div class="footer border-top border-gray-light mt-5 pt-3 text-left text-gray">
-        We use <a href="https://plausible.io/">Plausible</a> for website analytics
+        We use <a href="https://plausible.io/">Plausible</a> for website analytics and do not use cookies
       </div>
       
-    </div>
+    </div
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
     <script>anchors.add();</script>
   </body>
