--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,9 @@
       
       <div class="footer border-top border-gray-light mt-5 pt-3 text-left text-gray">
         We use <a href="https://plausible.io/">Plausible</a> for website analytics and DO NOT use cookies   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="https://powersheet.co/privacy-policy">Privacy Policy</a>
+        <a href="https://powersheet.co/privacy-policy" style="float:right;">Privacy Policy</a><span style="float:right;">
+        This text is right aligned
+    </span>
       </div>
       
     </div
